fix fonts not showing uo

--- a/projects/joyfully-clean/styles/typography.css
+++ b/projects/joyfully-clean/styles/typography.css
@@ -3,8 +3,8 @@
   font-family: "Cormorant Garamond";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("/fonts/cormorant-garamond-v14-latin-700.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("fonts/cormorant-garamond-v14-latin-700.woff")
+  src: local(""), url("../fonts/cormorant-garamond-v14-latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/cormorant-garamond-v14-latin-700.woff")
       format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* cormorant-garamond-700italic - latin */
@@ -12,9 +12,9 @@
   font-family: "Cormorant Garamond italic";
   font-style: italic;
   font-weight: 700;
-  src: local(""), url("/fonts/cormorant-garamond-v14-latin-700italic.woff2") format("woff2"),
+  src: local(""), url("../fonts/cormorant-garamond-v14-latin-700italic.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("fonts/cormorant-garamond-v14-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/cormorant-garamond-v14-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* fira-sans-regular - latin */
@@ -22,8 +22,8 @@
   font-family: "Fira Sans";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("/fonts/fira-sans-v15-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("/fonts/fira-sans-v15-latin-regular.woff")
+  src: local(""), url("../fonts/fira-sans-v15-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/fira-sans-v15-latin-regular.woff")
       format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* fira-sans-700 - latin */
@@ -31,7 +31,7 @@
   font-family: "Fira Sans";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("/fonts/fira-sans-v15-latin-700.woff2") format("woff2"),
+  src: local(""), url("../fonts/fira-sans-v15-latin-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */ url("../fonts/fira-sans-v15-latin-700.woff")
       format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
